attempting and abandoning canvas... bigger font... vlocity with updown arrows, very rough...

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
   <div id="messages"></div>
+  <canvas></canvas>
   <div id="caret"></div>
   <div id="current"></div>
   <script src="socket.io-1.2.0.js"></script>
